--- a/Basic_GUI_main_window_frame.ui
+++ b/Basic_GUI_main_window_frame.ui
@@ -1281,19 +1281,6 @@
       </item>
      </widget>
     </item>
-    <item row="26" column="2">
-     <widget class="QLineEdit" name="sampling_freq_line">
-      <property name="maximumSize">
-       <size>
-        <width>80</width>
-        <height>16777215</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>20000</string>
-      </property>
-     </widget>
-    </item>
     <item row="8" column="2">
      <widget class="QCheckBox" name="ch2_chkbox">
       <property name="text">
@@ -1456,6 +1443,13 @@
      <widget class="QLabel" name="lbl_phantom">
       <property name="text">
        <string>0.0</string>
+      </property>
+     </widget>
+    </item>
+    <item row="26" column="2">
+     <widget class="QLabel" name="lbl_samp_freq">
+      <property name="text">
+       <string>20000</string>
       </property>
      </widget>
     </item>
