--- a/Basic_GUI_main_window_frame.ui
+++ b/Basic_GUI_main_window_frame.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>947</width>
-    <height>877</height>
+    <height>723</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -1639,6 +1639,13 @@
       </property>
      </widget>
     </item>
+    <item row="26" column="2">
+     <widget class="QLabel" name="lbl_samp_freq">
+      <property name="text">
+       <string>20000</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -1647,7 +1654,7 @@
      <x>0</x>
      <y>0</y>
      <width>947</width>
-     <height>30</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
