--- a/GUI_main_window.ui
+++ b/GUI_main_window.ui
@@ -152,7 +152,7 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QLabel" name="lbl_u_dc_2">
+         <widget class="QLabel" name="lbl_u_out">
           <property name="minimumSize">
            <size>
             <width>40</width>
