--- a/GUI_com_settings_dialog.ui
+++ b/GUI_com_settings_dialog.ui
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
+ <author>Mitja Nemec, all rights reserved</author>
  <class>Dialog</class>
  <widget class="QDialog" name="Dialog">
   <property name="geometry">
