--- a/GUI_com_statistics_dialog.ui
+++ b/GUI_com_statistics_dialog.ui
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Communicationstatistics</class>
- <widget class="QDialog" name="Communicationstatistics">
+ <author>Mitja Nemec, all rights reserved</author>
+ <class>Dialog</class>
+ <widget class="QDialog" name="Dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
